(MAINT) - THE MAJOR CHANGES OR ISSUE TITLE
Github Info:
  - Issue: #16

Changes:
  - Added the sudo parameters into the hosts example file

--- a/examples/hosts/hosts_ex01.yaml
+++ b/examples/hosts/hosts_ex01.yaml
@@ -16,6 +16,7 @@ defaults:
   user: root
   password: 123456
   private_key: ~/.ssh/id_rsa
+  sudo_enabled: true
   ssh_options:
     - '-O defaults'
     - '-V'
